kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: beautifulthings-dep
  labels: {app: beautifulthings}
spec:
  replicas: 1
  template:
    metadata: {labels: {app: beautifulthings}}
    spec:
      containers:
        - name: beautifulthings
          image: docker.io/chiiph/beautifulthings:${TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 1
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
---
kind: Service
apiVersion: v1
metadata:
  name: beautifulthings-svc
  labels:
    app: beautifulthings
spec:
#  type: LoadBalancer
  type: NodePort
  selector:
    app: beautifulthings
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: beautifulthings-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: beautifulthings-ip
  labels:
    app: beautifulthings
spec:
  backend:
    serviceName: beautifulthings-svc
    servicePort: 8080
  tls:
  - secretName: beautifulthings-app-tls
    hosts:
    - server.beautifulthings.app
